@@ -65,6 +65,8 @@ Core
   session per IP lockouts (when RobotLimit is set).  See CVS log for more
   details.
 
+* lockout specialsubs will now override session per IP lockouts properly.
+
 UserDB
 ------
 
